fixed issue with redwood seeds